add shorten dto
