# app/internal/controllers/auth.go
@@ -1,7 +1,9 @@
 package controllers
 
 import (
+	"log"
 	"net/http"
+	"sync"
 
 	"github.com/go-chi/render"
 	"github.com/kingsbloc/scissor/internal/app"
@@ -12,6 +14,7 @@ import (
 
 type AuthController interface {
 	SignUp(w http.ResponseWriter, r *http.Request)
+	Signin(w http.ResponseWriter, r *http.Request)
 }
 
 type authController struct {
@@ -25,7 +28,7 @@ func NewAuthController(srv *app.MicroServices) AuthController {
 // Create
 // @Summary Create User.
 // @Description Create User Account.
-// @Tags Student
+// @Tags Auth
 // @Accept	json
 // @Produce	json
 // @Param requestBody body dto.AddUserDto true "Add User Dto"
@@ -33,7 +36,7 @@ func NewAuthController(srv *app.MicroServices) AuthController {
 // @Failure 400 {object} utils.ApiResponse
 // @Failure 500 {object} utils.ApiResponse
 // @Failure 422 {object} utils.ApiResponse{data=[]utils.ValidationError}
-// @Router /students/create [post]
+// @Router /api/v1/auth/signup [post]
 func (con *authController) SignUp(w http.ResponseWriter, r *http.Request) {
 	var dto dto.AddUserDto
 	if err := render.Bind(r, &dto); err != nil {
@@ -59,5 +62,66 @@ func (con *authController) SignUp(w http.ResponseWriter, r *http.Request) {
 		Status:  http.StatusCreated,
 		Message: "Account Created Successfully",
 		Success: true,
+	})
+}
+
+// Login
+// @Summary Login User.
+// @Description Login User Account.
+// @Tags Auth
+// @Accept	json
+// @Produce	json
+// @Param requestBody body dto.LoginDto true "Login Dto"
+// @Success 201 {object} utils.ApiResponse{data=bool}
+// @Failure 400 {object} utils.ApiResponse
+// @Failure 500 {object} utils.ApiResponse
+// @Failure 422 {object} utils.ApiResponse{data=[]utils.ValidationError}
+// @Router /api/v1/auth/login [post]
+func (con *authController) Signin(w http.ResponseWriter, r *http.Request) {
+	var dto dto.LoginDto
+	if err := render.Bind(r, &dto); err != nil {
+		render.Render(w, r, utils.ErrValidationRequest(err, "Validation Error"))
+		return
+	}
+	user, err1 := con.srv.AuthService.Signin(&dto)
+	if err1 != nil {
+		render.Render(w, r, &utils.ApiResponse{
+			Status:  http.StatusBadRequest,
+			Message: err1.Error(),
+			Success: false,
+		})
+		return
+	}
+	var jwt string
+	var refreshJWT string
+	var wg sync.WaitGroup
+	wg.Add(2)
+	go func() {
+		defer wg.Done()
+		jwt1, err := con.srv.JwtService.GenerateJWT(user.Email, string(rune(user.ID)), false)
+		if err != nil {
+			log.Fatal(err)
+		}
+		jwt = jwt1
+	}()
+	go func() {
+		defer wg.Done()
+		refreshJWT1, err := con.srv.JwtService.GenerateJWT(user.Email, string(rune(user.ID)), true)
+		if err != nil {
+			log.Fatal(err)
+		}
+		refreshJWT = refreshJWT1
+	}()
+	wg.Wait()
+
+	render.Render(w, r, &utils.ApiResponse{
+		Success: true,
+		Message: "Login Success",
+		Status:  http.StatusCreated,
+		Data: map[string]interface{}{
+			"user":         user,
+			"accessToken":  jwt,
+			"refreshToken": refreshJWT,
+		},
 	})
 }
