# app/internal/dto/user.go
@@ -12,3 +12,13 @@ func (a *AddUserDto) Bind(r *http.Request) error {
 	validationErr := validate.Struct(a)
 	return validationErr
 }
+
+type LoginDto struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required"`
+}
+
+func (a *LoginDto) Bind(r *http.Request) error {
+	validationErr := validate.Struct(a)
+	return validationErr
+}
